--- a/test/fixtures/jobopenings.yml
+++ b/test/fixtures/jobopenings.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tittle: MyString
-  description: MyString
-  image: 
+  title: MyString
+  description: MyString 
 
 two:
-  tittle: MyString
-  description: MyString
-  image: 
+  title: MyString
+  description: MyString 
