--- a/test/fixtures/professions.yml
+++ b/test/fixtures/professions.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tittle: MyString
-  image: 
+  title: MyString
 
 two:
-  tittle: MyString
-  image: 
+  title: MyString 
