--- a/test/fixtures/professions.yml
+++ b/test/fixtures/professions.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 666
   title: MyString
+  category_id: 666
 
 two:
   title: MyString 
